Use sourceDir and handler to build functions
Get rid of Exec when creating functions and building function images.
Build function images *before* calling faasDriver.Create().
Write the source dir.
rm function.Code field.
Move TarDir and Untar to tar.go
Add TarGzBytes() to utils/tar.go
CLI: create function.
Function.sourcePath for seed.yaml
TarDir to correctly normalize paths.
Migrate e2e tests.
