# swagger/models.json
@@ -543,16 +543,12 @@
       "description": "Function function",
       "type": "object",
       "required": [
-        "code",
+        "source",
         "image",
+        "handler",
         "name"
       ],
       "properties": {
-        "code": {
-          "description": "code",
-          "type": "string",
-          "x-go-name": "Code"
-        },
         "createdTime": {
           "description": "created time",
           "type": "integer",
@@ -564,6 +560,16 @@
           "type": "string",
           "format": "uuid",
           "x-go-name": "FaasID"
+        },
+        "functionImageURL": {
+          "description": "functionImageURL",
+          "type": "string",
+          "x-go-name": "FunctionImageURL"
+        },
+        "handler": {
+          "description": "handler",
+          "type": "string",
+          "x-go-name": "Handler"
         },
         "id": {
           "description": "id",
@@ -582,11 +588,6 @@
           "pattern": "^[\\w\\d\\-]+$",
           "x-go-name": "Kind",
           "readOnly": true
-        },
-        "main": {
-          "description": "main",
-          "type": "string",
-          "x-go-name": "Main"
         },
         "modifiedTime": {
           "description": "modified time",
@@ -618,6 +619,17 @@
             "type": "string"
           },
           "x-go-name": "Services"
+        },
+        "source": {
+          "description": "source",
+          "type": "string",
+          "format": "byte",
+          "x-go-name": "Source"
+        },
+        "sourcePath": {
+          "description": "only used in seed.yaml",
+          "type": "string",
+          "x-go-name": "SourcePath"
         },
         "status": {
           "$ref": "#/definitions/Status"
